	macro : added $[expr-list] support in reification
	all : fixed using + overload usage
	all : allow any type constraint for type parameters
	all : make property type optional (when a initial value is set)
	all : new post-compilation DCE
	all : Std.random(x) when x <= 0 is now always 0
	spod : added serialized data with SData<T>
	all : Dispatcher will now throw DETooManyValues

2012-07-16: 2.10
	java/cs : added two new targets (beta)
	all : fixed List and Null<T> for first, last, pop
	js : added js.Lib.debug()
	flash : fixed Xml.parent() when no parent
	flash : fixed haxe.io.Bytes.blit when len=0
	js/php/flash8 : fixed haxe.Int32.mul overflow on 52 bits
	js : fixed haxe.Utf8 usage (static 'length' issue)
	all : does not allow overriding var/prop
	flash : removed wrapping for Xml nodes, use instead specific compare when comparing two typed nodes
	js : use new haxe.xml.Parser (faster, not based on Regexp)
	flash : fixed completion issue with for( x in Vector )
	all : optimized Std.int(123) and Std.int(123.45)
	flash : bugfix for @:bitmap with 24-bits PNG (flash decode wrong colors)
	as3 : fixed EnumValue becomes Object
	js : removed js.Lib.isIE/isOpera (not complete, use js.JQuery.browser instead)
	all : function parameters are nullable if they are declared with '?'
	all : added support for finding common base types of multiple types (unify_min) for array, switch, if
	php : do not implement duplicate interfaces
	haxelib : added git support through haxelib git
	all : allow derived classes to widen method visibility
	macro : added haxe.macro.Context.getLocalMethod
	macro : improved support of "using" macro functions
	php : optimized Xml implementation
	php : fixed Reflect.get/setProperty not working on PHP < 5.3
	all : support for callback(f, _, x)
	all : allow private access between classes that have a common base class
	all : added Output.writeFloat/Double and Input.readFloat/Double
	all : support for var:{x:Float} = { x = 1 } constant structure subtyping